--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </p>
 
           <p>
-            My hobbies: Bouldering, Sleeping, Watach sunset, Cats
+            My hobbies: Bouldering, Sleeping, Watching sunset, Cats
           </p>
         </section>
 
@@ -207,7 +207,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm studying</h3>
+          <h3 class="h3 service-title">What I'm studying</h3>
 
           <ul class="service-list">
 
@@ -219,10 +219,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Subject#1</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  what of Subject#1?
                 </p>
               </div>
 
@@ -235,10 +235,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web development</h4>
+                <h4 class="h4 service-item-title">Subject#2</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  what of Subject#2?
                 </p>
               </div>
 
@@ -251,10 +251,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Subject#3</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  what of Subject#3?
                 </p>
               </div>
 
@@ -267,10 +267,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">Subject#4</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  what of Subject#4?
                 </p>
               </div>
 
