--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="#">
+              <div class="blog-post-card">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
@@ -544,7 +544,7 @@
 
                 </div>
 
-              </a>
+              </div>
             </li>
 
             <li class="blog-post-item">
