--- a/index.html
+++ b/index.html
@@ -96,14 +96,6 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="calendar-outline"></ion-icon>
-            </div>
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
@@ -506,7 +498,7 @@
       <article class="news" data-page="news">
 
         <header>
-          <h2 class="h2 article-title">blog</h2>
+          <h2 class="h2 article-title">news</h2>
         </header>
 
         <section class="blog-posts">
