--- a/index.html
+++ b/index.html
@@ -423,13 +423,15 @@
 
           <h3 class="h3 skills-title">My skills</h3>
 
-            <ul>
-              <li>Web design</li>
-              <li>Graphic design</li>
-              <li>Branding</li>
-              <li>WordPress</li>
-              
-            </ul>
+          <section class="about-text">
+            <p>
+              - High-performance Computing
+            </p>
+  
+            <p>
+              - Python/R
+            </p>
+          </section>
 
         </section>
 
