--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <div class="blog-post-card">
+              <a href="#">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
@@ -484,7 +484,7 @@
 
                 </div>
 
-              </div>
+              </a>
             </li>
 
             <li class="blog-post-item">
