--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-blocking.svg
+                <img src="./assets/images/icon_blocking.svg
                 " alt="blocking icon" width="40">
               </div>
 
@@ -220,7 +220,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-LA.svg" 
+                <img src="./assets/images/icon_LA.svg" 
                   alt="LA icon" width="40">
               </div>
 
@@ -240,7 +240,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-AI.svg" alt="AI icon" width="40">
+                <img src="./assets/images/icon_XAI.svg" alt="AI icon" width="40">
               </div>
 
               <div class="service-content-box">
