--- a/index.html
+++ b/index.html
@@ -175,10 +175,8 @@
 
         <section class="about-text">
           <p>
-            I'm a 2nd-year PhD student in 
-            <a href="https://www.eaps.purdue.edu/" target="_blank" rel="noopener">EAPS, Purdue University</a>.
-            I work with Dr. Lei Wang in the
-            <a href="https://www.leiw.org/" target="_blank" rel="noopener">Weather and Climate Dynamics Laboratory</a>.            
+            I'm a 2nd-year PhD student in <a href="https://www.eaps.purdue.edu/" target="_blank" rel="noopener">EAPS, Purdue University</a>.
+            I work with Dr. Lei Wang in the <a href="https://www.leiw.org/" target="_blank" rel="noopener">Weather and Climate Dynamics Laboratory</a>.            
             My research focus on extreme weather events and their underlying dynamical mechanisms. 
           </p>
 
@@ -202,7 +200,7 @@
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon_blocking.svg
-                " alt="blocking icon" width="40">
+                " alt="blocking icon" width="60">
               </div>
 
               <div class="service-content-box">
@@ -221,7 +219,7 @@
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon_LA.svg" 
-                  alt="LA icon" width="40">
+                  alt="LA icon" width="60">
               </div>
 
               <div class="service-content-box">
@@ -240,7 +238,8 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon_XAI.svg" alt="AI icon" width="40">
+                <img src="./assets/images/icon_XAI.svg" 
+                  alt="AI icon" width="60">
               </div>
 
               <div class="service-content-box">
@@ -435,9 +434,7 @@
 
                   <p class="blog-text">
                     I’m thrilled to announce that, as a 1st-year, 
-                    I was awarded 
-                    <a href="https://nspires.nasaprs.com/external/solicitations/summary!init.do?solId={2AAB44BB-6DFB-C42E-315A-DC2D70683A9D}&path=open" target="_blank" rel="noopener">NASA FINESST</a> !!            
-                    In the next 3 years, I’m going to work on studying the role of soil moisture in driving heatwaves over the US.  
+                    I was awarded <a href="https://nspires.nasaprs.com/external/solicitations/summary!init.do?solId={2AAB44BB-6DFB-C42E-315A-DC2D70683A9D}&path=open" target="_blank" rel="noopener">NASA FINESST</a> !! In the next 3 years, I’m going to work on studying the role of soil moisture in driving heatwaves over the US.  
                   </p>
 
                 </div>
@@ -465,8 +462,7 @@
                   <h3 class="h3 blog-item-title">Attending Stormtracks 2025 Workshop</h3>
 
                   <p class="blog-text">
-                    In Bergen, Norway, I spent a week attending the Stormtracks Workshop alongside scientists from around the world. 
-                    I was proud to present my recent project, which quantifys the contribution of synoptic eddies to atmospheric blocking.
+                    In Bergen, Norway, I spent a week attending the Stormtracks Workshop alongside scientists from around the world. I was proud to present my recent project, which quantifys the contribution of synoptic eddies to atmospheric blocking.
                   </p>
 
                 </div>
@@ -494,8 +490,7 @@
                   <h3 class="h3 blog-item-title">Global km-Scale Hackathon</h3>
 
                   <p class="blog-text">
-                    Hosted by GFDL and Princeton, I attended the Global km-Scale Hackathon, 
-                    where I learned about km-scale climate modeling from leading climate scientists.
+                    Hosted by GFDL and Princeton, I attended the Global km-Scale Hackathon, where I learned about km-scale climate modeling from leading climate scientists.
                   </p>
 
                 </div>
