--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="pub-outline"></ion-icon>
+              <ion-icon name="newspaper-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Publication</h3>
@@ -332,7 +332,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="work-outline"></ion-icon>
+              <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Working Experience</h3>
@@ -371,7 +371,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="skill-outline"></ion-icon>
+              <ion-icon name="construct-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Skills</h3>
