--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
               <div class="blog-post-card">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-5.jpg" alt="AGU2024" loading="lazy">
+                  <img src="./assets/images/blog-AGU.jpg" alt="AGU2024" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
